--- a/public/views/index.html
+++ b/public/views/index.html
@@ -49,7 +49,8 @@
 		<div ng-controller="ProductDataCtrl">
 		  <div class="panel">Search : <input type="text" ng-model="search.$"> 
 		   <div class="row collapse">
-            <div class="ten mobile-three columns"><input type="text" placeholder="max price">
+            <div class="ten mobile-three columns">
+			<input type="text" placeholder="max price">
               <input type="text" placeholder="size">
             </div>
             <div class="two mobile-one columns">
